grammatical_analysis/yacc/C/c.output
Terminaux inutilisés dans la grammaire

    tEQ
    tAMPER
    tCOMMA
    tELSE
    tIF
    tAND
    tNE
    tGT
    tGE
    tLT
    tLE
    tOR
    tWHILE
    tRETURN
    tNOT
    tERROR
    tPRINT


État 36 conflits: 4 décalage/réduction


Grammaire

    0 $accept: main $end

    1 main: type tMAIN tLPAR tVOID tRPAR block

    2 type: tINT
    3     | tVOID

    4 block: tLBRACE expression_list tRBRACE

    5 expression_list: ε
    6                | expression expression_list

    7 expression: var_dec
    8           | assign

    9 assign: tID tASSIGN arithmetic tSEMI

   10 var_dec: tINT tID tSEMI
   11        | tINT tID tASSIGN arithmetic tSEMI

   12 arithmetic_operator: tADD
   13                    | tMUL
   14                    | tSUB
   15                    | tDIV

   16 arithmetic: value
   17           | arithmetic arithmetic_operator arithmetic

   18 value: tID
   19      | tNB


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    tMUL (258) 13
    tVOID (259) 1 3
    tEQ (260)
    tAMPER (261)
    tMAIN (262) 1
    tSEMI (263) 9 10 11
    tLPAR (264) 1
    tRPAR (265) 1
    tRBRACE (266) 4
    tLBRACE (267) 4
    tADD (268) 12
    tCOMMA (269)
    tINT (270) 2 10 11
    tSUB (271) 14
    tELSE (272)
    tDIV (273) 15
    tIF (274)
    tAND (275)
    tNE (276)
    tGT (277)
    tGE (278)
    tLT (279)
    tLE (280)
    tOR (281)
    tWHILE (282)
    tRETURN (283)
    tASSIGN (284) 9 11
    tNOT (285)
    tERROR (286)
    tPRINT (287)
    tID <name> (288) 9 10 11 18
    tNB <val> (289) 19


Non-terminaux, suivis des règles où ils apparaissent

    $accept (35)
        à gauche: 0
    main (36)
        à gauche: 1
        à droite: 0
    type (37)
        à gauche: 2 3
        à droite: 1
    block (38)
        à gauche: 4
        à droite: 1
    expression_list (39)
        à gauche: 5 6
        à droite: 4 6
    expression (40)
        à gauche: 7 8
        à droite: 6
    assign (41)
        à gauche: 9
        à droite: 8
    var_dec (42)
        à gauche: 10 11
        à droite: 7
    arithmetic_operator (43)
        à gauche: 12 13 14 15
        à droite: 17
    arithmetic (44)
        à gauche: 16 17
        à droite: 9 11 17
    value (45)
        à gauche: 18 19
        à droite: 16


État 0

    0 $accept: • main $end

    tVOID  décalage et aller à l'état 1
    tINT   décalage et aller à l'état 2

    main  aller à l'état 3
    type  aller à l'état 4


État 1

    3 type: tVOID •

    $défaut  réduction par utilisation de la règle 3 (type)


État 2

    2 type: tINT •

    $défaut  réduction par utilisation de la règle 2 (type)


État 3

    0 $accept: main • $end

    $end  décalage et aller à l'état 5


État 4

    1 main: type • tMAIN tLPAR tVOID tRPAR block

    tMAIN  décalage et aller à l'état 6


État 5

    0 $accept: main $end •

    $défaut  accepter


État 6

    1 main: type tMAIN • tLPAR tVOID tRPAR block

    tLPAR  décalage et aller à l'état 7


État 7

    1 main: type tMAIN tLPAR • tVOID tRPAR block

    tVOID  décalage et aller à l'état 8


État 8

    1 main: type tMAIN tLPAR tVOID • tRPAR block

    tRPAR  décalage et aller à l'état 9


État 9

    1 main: type tMAIN tLPAR tVOID tRPAR • block

    tLBRACE  décalage et aller à l'état 10

    block  aller à l'état 11


État 10

    4 block: tLBRACE • expression_list tRBRACE

    tINT  décalage et aller à l'état 12
    tID   décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 5 (expression_list)

    expression_list  aller à l'état 14
    expression       aller à l'état 15
    assign           aller à l'état 16
    var_dec          aller à l'état 17


État 11

    1 main: type tMAIN tLPAR tVOID tRPAR block •

    $défaut  réduction par utilisation de la règle 1 (main)


État 12

   10 var_dec: tINT • tID tSEMI
   11        | tINT • tID tASSIGN arithmetic tSEMI

    tID  décalage et aller à l'état 18


État 13

    9 assign: tID • tASSIGN arithmetic tSEMI

    tASSIGN  décalage et aller à l'état 19


État 14

    4 block: tLBRACE expression_list • tRBRACE

    tRBRACE  décalage et aller à l'état 20


État 15

    6 expression_list: expression • expression_list

    tINT  décalage et aller à l'état 12
    tID   décalage et aller à l'état 13

    $défaut  réduction par utilisation de la règle 5 (expression_list)

    expression_list  aller à l'état 21
    expression       aller à l'état 15
    assign           aller à l'état 16
    var_dec          aller à l'état 17


État 16

    8 expression: assign •

    $défaut  réduction par utilisation de la règle 8 (expression)


État 17

    7 expression: var_dec •

    $défaut  réduction par utilisation de la règle 7 (expression)


État 18

   10 var_dec: tINT tID • tSEMI
   11        | tINT tID • tASSIGN arithmetic tSEMI

    tSEMI    décalage et aller à l'état 22
    tASSIGN  décalage et aller à l'état 23


État 19

    9 assign: tID tASSIGN • arithmetic tSEMI

    tID  décalage et aller à l'état 24
    tNB  décalage et aller à l'état 25

    arithmetic  aller à l'état 26
    value       aller à l'état 27


État 20

    4 block: tLBRACE expression_list tRBRACE •

    $défaut  réduction par utilisation de la règle 4 (block)


État 21

    6 expression_list: expression expression_list •

    $défaut  réduction par utilisation de la règle 6 (expression_list)


État 22

   10 var_dec: tINT tID tSEMI •

    $défaut  réduction par utilisation de la règle 10 (var_dec)


État 23

   11 var_dec: tINT tID tASSIGN • arithmetic tSEMI

    tID  décalage et aller à l'état 24
    tNB  décalage et aller à l'état 25

    arithmetic  aller à l'état 28
    value       aller à l'état 27


État 24

   18 value: tID •

    $défaut  réduction par utilisation de la règle 18 (value)


État 25

   19 value: tNB •

    $défaut  réduction par utilisation de la règle 19 (value)


État 26

    9 assign: tID tASSIGN arithmetic • tSEMI
   17 arithmetic: arithmetic • arithmetic_operator arithmetic

    tMUL   décalage et aller à l'état 29
    tSEMI  décalage et aller à l'état 30
    tADD   décalage et aller à l'état 31
    tSUB   décalage et aller à l'état 32
    tDIV   décalage et aller à l'état 33

    arithmetic_operator  aller à l'état 34


État 27

   16 arithmetic: value •

    $défaut  réduction par utilisation de la règle 16 (arithmetic)


État 28

   11 var_dec: tINT tID tASSIGN arithmetic • tSEMI
   17 arithmetic: arithmetic • arithmetic_operator arithmetic

    tMUL   décalage et aller à l'état 29
    tSEMI  décalage et aller à l'état 35
    tADD   décalage et aller à l'état 31
    tSUB   décalage et aller à l'état 32
    tDIV   décalage et aller à l'état 33

    arithmetic_operator  aller à l'état 34


État 29

   13 arithmetic_operator: tMUL •

    $défaut  réduction par utilisation de la règle 13 (arithmetic_operator)


État 30

    9 assign: tID tASSIGN arithmetic tSEMI •

    $défaut  réduction par utilisation de la règle 9 (assign)


État 31

   12 arithmetic_operator: tADD •

    $défaut  réduction par utilisation de la règle 12 (arithmetic_operator)


État 32

   14 arithmetic_operator: tSUB •

    $défaut  réduction par utilisation de la règle 14 (arithmetic_operator)


État 33

   15 arithmetic_operator: tDIV •

    $défaut  réduction par utilisation de la règle 15 (arithmetic_operator)


État 34

   17 arithmetic: arithmetic arithmetic_operator • arithmetic

    tID  décalage et aller à l'état 24
    tNB  décalage et aller à l'état 25

    arithmetic  aller à l'état 36
    value       aller à l'état 27


État 35

   11 var_dec: tINT tID tASSIGN arithmetic tSEMI •

    $défaut  réduction par utilisation de la règle 11 (var_dec)


État 36

   17 arithmetic: arithmetic • arithmetic_operator arithmetic
   17           | arithmetic arithmetic_operator arithmetic •

    tMUL  décalage et aller à l'état 29
    tADD  décalage et aller à l'état 31
    tSUB  décalage et aller à l'état 32
    tDIV  décalage et aller à l'état 33

    tMUL     [réduction par utilisation de la règle 17 (arithmetic)]
    tADD     [réduction par utilisation de la règle 17 (arithmetic)]
    tSUB     [réduction par utilisation de la règle 17 (arithmetic)]
    tDIV     [réduction par utilisation de la règle 17 (arithmetic)]
    $défaut  réduction par utilisation de la règle 17 (arithmetic)

    arithmetic_operator  aller à l'état 34
